Tính thêm avatar mà không đc

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -178,4 +178,8 @@
 		<servlet-name>ChangePasswordServlet</servlet-name>
 		<url-pattern>/ChangePasswordServlet</url-pattern>
 	</servlet-mapping>
+	
+	<session-config>
+        <session-timeout>30</session-timeout> <!-- 30 phút -->
+    </session-config>
 </web-app>
